feat(routes) retrieve cinema route
